--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ng-icons/heroicons": "^26.1.0",
     "@ng-icons/material-icons": "^26.1.0",
     "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.39.0",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
