--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^17.0.2",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -28,9 +29,12 @@
     "@ng-icons/heroicons": "^26.1.0",
     "@ng-icons/material-icons": "^26.1.0",
     "@popperjs/core": "^2.11.8",
+    "@syncfusion/ej2-angular-dropdowns": "^23.2.7",
+    "@syncfusion/ej2-angular-inputs": "^23.2.4",
     "bootstrap": "^5.2.3",
+    "ng-multiselect-dropdown": "^1.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
