--- a/angular.json
+++ b/angular.json
@@ -54,6 +54,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/ng-multiselect-dropdown.theme.scss",
               "src/styles.css"
 
             ],
