--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
+    "@angular/animations": "^16.2.12",
     "@angular/cdk": "^17.0.2",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
@@ -25,14 +25,11 @@
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/timegrid": "^6.1.9",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
-    "@ng-icons/core": "^26.1.0",
-    "@ng-icons/heroicons": "^26.1.0",
-    "@ng-icons/material-icons": "^26.1.0",
     "@popperjs/core": "^2.11.8",
-    "@syncfusion/ej2-angular-dropdowns": "^23.2.7",
-    "@syncfusion/ej2-angular-inputs": "^23.2.4",
     "bootstrap": "^5.2.3",
+    "dropzone": "^6.0.0-beta.2",
     "ng-multiselect-dropdown": "^1.0.0",
+    "ngx-dropzone-wrapper": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
